[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Diliya"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.0"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portscan = "portscan:main"